tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 / 4 / 6\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Add(
                    Number(
                        1.0,
                    ),
                    (),
                    Divide(
                        Divide(
                            Number(
                                2.0,
                            ),
                            (),
                            Number(
                                4.0,
                            ),
                        ),
                        (),
                        Number(
                            6.0,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
