tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"2 - 3 - 4\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Subtract(
                    Subtract(
                        Number(
                            2.0,
                        ),
                        (),
                        Number(
                            3.0,
                        ),
                    ),
                    (),
                    Number(
                        4.0,
                    ),
                ),
            ),
        ),
    ],
)
