tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"2 - (3 - 4)\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Subtract(
                    Number(
                        2.0,
                    ),
                    (),
                    Parentheses(
                        (),
                        Subtract(
                            Number(
                                3.0,
                            ),
                            (),
                            Number(
                                4.0,
                            ),
                        ),
                        (),
                    ),
                ),
            ),
        ),
    ],
)
