tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-5.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"-(2 + 3) * 5\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Multiply(
                    Neg(
                        (),
                        Parentheses(
                            (),
                            Add(
                                Number(
                                    2.0,
                                ),
                                (),
                                Number(
                                    3.0,
                                ),
                            ),
                            (),
                        ),
                    ),
                    (),
                    Number(
                        5.0,
                    ),
                ),
            ),
        ),
    ],
)
