tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-6.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"(8+2)*(7-3)/2\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Divide(
                    Multiply(
                        Parentheses(
                            (),
                            Add(
                                Number(
                                    8.0,
                                ),
                                (),
                                Number(
                                    2.0,
                                ),
                            ),
                            (),
                        ),
                        (),
                        Parentheses(
                            (),
                            Subtract(
                                Number(
                                    7.0,
                                ),
                                (),
                                Number(
                                    3.0,
                                ),
                            ),
                            (),
                        ),
                    ),
                    (),
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
    ],
)
