tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-7.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"2 / 3 + 1\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Add(
                    Divide(
                        Number(
                            2.0,
                        ),
                        (),
                        Number(
                            3.0,
                        ),
                    ),
                    (),
                    Number(
                        1.0,
                    ),
                ),
            ),
        ),
    ],
)
