tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-8.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"25 / 5 * 3 + 7 - 2 * 4\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Subtract(
                    Add(
                        Multiply(
                            Divide(
                                Number(
                                    25.0,
                                ),
                                (),
                                Number(
                                    5.0,
                                ),
                            ),
                            (),
                            Number(
                                3.0,
                            ),
                        ),
                        (),
                        Number(
                            7.0,
                        ),
                    ),
                    (),
                    Multiply(
                        Number(
                            2.0,
                        ),
                        (),
                        Number(
                            4.0,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
