tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_def-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"fun func(a: Num) {}\").unwrap()"
---
Statement(
    [
        FunctionDefinition(
            (),
            "func",
            (),
            [
                Typed(
                    Variable(
                        "a",
                    ),
                    Type(
                        (),
                        "Num",
                    ),
                ),
            ],
            (),
            None,
            (),
            [],
            (),
        ),
    ],
)
