tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_def-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"fun func(a: Num, b: Text) {}\").unwrap()"
---
Statement(
    [
        FunctionDefinition(
            (),
            "func",
            (),
            [
                Typed(
                    Variable(
                        "a",
                    ),
                    Type(
                        (),
                        "Num",
                    ),
                ),
                Typed(
                    Variable(
                        "b",
                    ),
                    Type(
                        (),
                        "Text",
                    ),
                ),
            ],
            (),
            None,
            (),
            [],
            (),
        ),
    ],
)
