tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_def-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"fun func(a: Num, b: Text, c: Bool): Num {}\").unwrap()"
---
Statement(
    [
        FunctionDefinition(
            (),
            "func",
            (),
            [
                Typed(
                    Variable(
                        "a",
                    ),
                    Type(
                        (),
                        "Num",
                    ),
                ),
                Typed(
                    Variable(
                        "b",
                    ),
                    Type(
                        (),
                        "Text",
                    ),
                ),
                Typed(
                    Variable(
                        "c",
                    ),
                    Type(
                        (),
                        "Bool",
                    ),
                ),
            ],
            (),
            Some(
                Type(
                    (),
                    "Num",
                ),
            ),
            (),
            [],
            (),
        ),
    ],
)
